# ontology-learner

./: .gitignore  README.md  pyproject.toml
src/ontology_learner/: __init__.py  concept_annotation_batch.py  coordinate_extraction.ipynb  coordinate_extraction_llama3.ipynb  expand_tar_gz.sh  get_all_bioc.sh  gpt4_batch_utils.py  json_utils.py  pmc_search.py  process_pmc_papers.ipynb  process_pmc_papers.py  process_pmc_papers_batch.py  process_pmc_results.ipynb  process_pmc_results.py  publication.py  run_gpt4_batch.py  test_publication.py  utils.py
src/ontology_learner/annotation/: task_annotation_batch.py
src/ontology_learner/coordinate_extraction/: compare_gpt4_llama3.ipynb  coordinate_extraction.ipynb  coordinate_extraction_llama3.ipynb  extraction_utils.py  gpt4_meta_analysis.ipynb  process_llama3_data.ipynb
src/ontology_learner/gpt4_direct/: gpt4_direct.ipynb  gpt_term_mining.py  task_abstract_retrieval_and_embedding.ipynb  together_utils.py
src/ontology_learner/lit_mining/: download_batch_results.py  expand_tar_gz.sh  get_concepts_and_tasks.ipynb  get_fulltext_embeddings.ipynb  litmining_utils.py  paperResults.py  parse_batch_results.py  pmc_search.py  pmcid_to_pmid_mapping.ipynb  process_pmc_papers_batch.py  process_pmc_results.py
src/ontology_learner/refinement/: align_refined_tasks_and_concepts.ipynb  concept_refinement.ipynb  refinement_utils.py  task_refinement.ipynb
src/ontology_learner/topic_mapping/: embedding_finetuning.py  fit_bertopic_model.py  generate_train_test_split.py  process_fulltext.py
