[project]
name = "ontology-learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pymupdf>=1.24.13",
    "matplotlib>=3.9.2",
    "pickleshare>=0.7.5",
    "llama-parse>=0.5.14",
    "llama-index>=0.11.23",
    "pandas>=2.2.3",
    "langchain-community>=0.3.7",
    "pypdf>=5.1.0",
    "biopython>=1.84",
    "jupytext>=1.16.4",
    "ipykernel>=6.29.5",
    "llm-query",
    "fasttext>=0.9.3",
    "umap-learn>=0.5.7",
    "infomap>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llm-query = { path = "/Users/poldrack/Dropbox/code/llm_query" }
