[project]
name = "ontology-learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "sentence-transformers>=3.3.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "accelerate>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
